--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="navbar">
+    <header>
+        <div class="navbar">
         <div class="logo"><a href="#"><img src="images/logo.svg" alt="logo"></a></div>
         <ul>
             <li><a href="#">Features</a></li>
@@ -32,5 +31,40 @@
 
         </div>
     </div>
+    </header>
+
+    <img src="images/bg-curve-desktop.svg" alt="" class="curve-desktop">
+    <section class="second-section">
+        <div class="sec2-left">
+        </div>
+        <div class="sec2-right">
+            <h1>Stay Productive, wherever you are</h1>
+            <p class="p1">
+                Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.
+            </p>
+            <p class="p2">
+                Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required!
+            </p>
+            <div class="link">
+                <a href="#">
+                    See how Fylo works
+                    <img src="images/icon-arrow.svg" alt="arrow">
+                </a>
+            </div>
+            <div class="testimonial-card">
+                <img src="images/icon-quotes.svg" alt="" class="quotes">
+                <p>
+                    Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.
+                </p>
+                <div class="avatar">
+                    <img src="images/avatar-testimonial.jpg" alt="Kyle">
+                    <div class="desc">
+                        <h3 class="test-name">Kyle Burton</h3>
+                        <p class="test-job">Founder & CEO, Huddle</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
